# project_euler

./: .gitignore  README.md  justfile  pyproject.toml  solution.py
scripts/: new_problem.py
src/euler/problems/p0000_sum_of_odd_squares/: README.md  solution.py
src/euler/problems/p0001_multiples_of_3_or_5/: README.md  solution.py
src/euler/problems/p0002_even_fibonacci_numbers/: README.md  solution.py
src/euler/problems/p0003_largest_prime_factor/: README.md  solution.py
src/euler/problems/p0004_largest_palindrome_product/: README.md  solution.py
src/euler/problems/p0005_smallest_multiple/: README.md  solution.py
src/euler/problems/p0006_sum_square_difference/: README.md  solution.py
src/euler/problems/p0007_10001st_prime/: README.md  solution.py
src/euler/problems/p0008_largest_product_in_a_series/: README.md  solution.py
src/euler/problems/p0009_special_pythagorean_triplet/: README.md  solution.py
src/euler/utils/: common.py  primes.py
tests/: test_basics.py  test_p0007.py  test_p0008.py  test_p0009.py  test_p0010.py  test_p0011.py  test_p0012.py  test_p0013.py  test_p0014.py  test_p0015.py  test_p0016.py  test_p0017.py  test_p0018.py  test_p0019.py  test_p0020.py  test_p0021.py  test_p0022.py  test_p0023.py  test_p0024.py  test_p0025.py  test_p0026.py  test_p0027.py  test_p0028.py  test_p0029.py  test_p0030.py  test_p0031.py  test_p0032.py  test_p0033.py  test_p0034.py  test_p0035.py  test_p0051.py  test_p0052.py  test_p0053.py  test_p0054.py  test_p0055.py  test_p0056.py  test_p0057.py  test_p0058.py  test_p0059.py  test_p0060.py  (+12 more)
(+185 files in other folders)
